Changed FullyQualified to URISymbol - Use java URI class.